--- a/Game.html
+++ b/Game.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="container">
+      <!-- Nội dung của phần tử cha -->
+    </div>
     <div class="game">
       <div id="player1" class="player"></div>
       <div id="player2" class="player"></div>
       <div id="player3" class="player"></div>
       <div id="player4" class="player"></div>
+      <div id="player5" class="player"></div>
     </div>
     <div class="buttons">
       <button id="startButton">Bắt đầu</button>
